@@ -1,5 +1,8 @@
 Flukes Release Notes:
 ---------------------
+03/09/15:
+- Addded support for GWU and CIENA racks, removed old size definitions
+
 02/25/15:
 - Added support for new-style stitchport definitions
 
